# genshin

./: .gitignore  .pnp.cjs  next-fastapi-app-workspace.code-workspace  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  (+1 more)
server/: .gitignore  Dockerfile  app.js  app.ts  index.js  main.py  package-lock.json  package.json  pyproject.toml
server/.cache/ambr/: aiohttp-cache.db  version.txt
server/.enka_py/assets/: characters.json  consts.json  talents.json  text_map.json
server/api/: router.py
server/data/: artifact.py  character.py  globalVariable.py  weapon.py
server/data/character/: __init__.py  fontaine.py  inazuma.py  liyue.py  mondstadt.py  natlan.py  nodKrai.py  omniScourge.py  snezhnaya.py  sumeru.py
server/data/weapon/: __init__.py  catalyst.py  claymore.py
server/models/: artifact.py  calculation.py  character.py  fightProp.py  globalVariable.py  weapon.py
server/models/character/: __init__.py  inazuma.py  mondstadt.py  natlan.py  snezhnaya.py
server/models/weapon/: bow.py  polearm.py  sword.py
server/schemas/: artifact.py  calculation.py  character.py  fightProp.py  weapon.py
server/services/: ambrApi.py  artifact.py  calculation.py  character.py  parseEnka.py  weapon.py
server/services/calculation/: __init__.py  calculation.py  reaction.py  utils.py
server/services/character/: __init__.py  commonData.py  fontaine.py  inazuma.py  liyue.py  mondstadt.py  natlan.py  nodKrai.py  omniScourge.py  snezhnaya.py  sumeru.py
server/services/weapon/: __init__.py  bow.py  catalyst.py  claymore.py  commonData.py  polearm.py  sword.py
(+96 files in other folders)
