[tool.black]
line-length = 180
target-version = ['py312']

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

[project]
name = "genshin_setting_calculator"
version = "0.1.0"
description = "Genshin Impact character setting calculator Created by JjoriButler"
authors = [
    {name = "μ„±νΈν•",email = "tjdghgud12@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "ambr-py (>=1.8.6,<2.0.0)",
    "enka (>=2.5.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
